timeline alignment issue is fixed

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
 .carousel-item,.w-100 {
-	height: 30vh;
-	min-height: 200px;
+	height: 26vh;
+	min-height: 180px;
 }
 .countdownbox{
 	font-size: 17px;
