--- a/src/app/slrc-timeline/slrc-timeline.component.css
+++ b/src/app/slrc-timeline/slrc-timeline.component.css
@@ -49,7 +49,7 @@
 .main-timeline .timeline-icon{
   color: #fff;
   background: #ff5a44;
-  font-size: 50px;
+  font-size: 30px;
   line-height: 103px;
   width: 100px;
   height: 100px;
